# sicniki_sumniki

sicniki-sumniki-api/: .env  Cargo.toml  Makefile  filler.sh  readme.md
sicniki-sumniki-api/assets/: funkcionalnost aplikacije.txt  test.txt
sicniki-sumniki-api/src/: handlers.rs  lib.rs  main.rs  service.rs  util.rs
sicniki-sumniki-api/src/server/: handlers.rs  mod.rs  repository.rs  service.rs
sicniki-sumniki-ui/: .env  package.json
sicniki-sumniki-ui/src/: index.html  main.js  main.scss
sicniki-sumniki-ui/src/components/: Actions.js  Alert.js  FixWord.js  Instructions.js
sicniki-sumniki-ui/src/store/: index.js
sicniki-sumniki-ui/src/style/: _elements.scss
