[package]
name = "sicniki_sumniki"
version = "0.1.0"
authors = ["Jernej Sila <jernej.sila@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bodyparser = "0.8.0"
clap = "3.0.0-beta.1"
dotenv = "0.15.0"
hyper = "0.10"
iron = "0.6.1"
iron-cors = "0.8.0"
mysql = "19.0.0"
router = "0.6.0"
serde = {version="1.0.115", features=["derive"]}
serde_json = "1.0.57"