[package]
name = "sicniki_sumniki"
version = "0.1.0"
authors = ["Jernej Sila <jernej.sila@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["mysql"] }
dotenv = "0.15"
env_logger = "0.8"
itertools = "0.10"
log = "0.4"
rocket = "0.4"
rocket_contrib = "0.4"
rocket_cors = "0.5"
rss = "1.10"
scraper = "0.12"
serde = { version = "1.0", features = ["derive"]}
ureq = "2.1"